# huffman_compressor

./: .gitignore  CMakeLists.txt
include/: BitStream.hpp  FileCompressor.hpp  HuffmanArchiver.hpp  HuffmanTree.hpp
src/: FileCompressor.cpp  HuffmanArchiver.cpp  main.cpp
